# StreamAudioCore-

./: .gitignore  DESIGN_SYSTEM.md  DEVELOPER1_GUIDE.md  README.md  RELEASE_WORKFLOW.md  build-release.ps1
.agents/: AGENTS.md
Scripts/: publish-update.ps1  publish-update.sh  start-project.ps1  upload_r2.py  تشغيل-البرنامج.bat
streamaudio-core/: DOWNLOADER_FEATURE_MAP.md  FEATURE_PARITY_REPORT.md  fix_glass.py  fix_layout.py  index.html  package-lock.json  package.json  patchAppLayout.cjs  patchAppLayout.py
streamaudio-core/docs/: A3_DOWNLOADER_AUDIT.md  A3_DOWNLOADER_REMOVAL_REPORT.md  CLEANUP_REPORT.md  PHASE_4_4_REPORT.md  REPOSITORY_SIZE_AUDIT.md
streamaudio-core/src/: App.css  App.tsx  constants.ts  main.tsx  test.rs  types.ts
streamaudio-core/src-tauri/: Cargo.toml  tauri.conf.json
streamaudio-core/src-tauri/capabilities/: default.json
streamaudio-core/src-tauri/icons/: icon.icns
streamaudio-core/src-tauri/src/: audio.rs  cloud.rs  config.rs  dependency_manager.rs  downloader.rs  lib.rs  main.rs  updater.rs  updater_config.rs
streamaudio-core/src/components/: DownloaderTab.tsx  TitleBar.tsx
streamaudio-core/src/components/audio/: ChannelStrip.tsx
streamaudio-core/src/hooks/: useAppVersion.ts  useAudioLibrary.ts  useCloudSync.ts  usePadEditor.ts  useSamplerGrid.ts  useSoundAssigner.ts
streamaudio-core/src/i18n/: index.tsx
streamaudio-core/src/services/: cloudService.ts  configService.ts  deviceService.ts  dialogService.ts  playbackService.ts
تثبيت التحديث ورفعه للمستخدمين/: 1- بناء التحديث.ps1  2- رفع التحديث للمستخدمين.ps1
(+19 files in other folders)
