[package]
name = "streamaudio-core"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "streamaudio_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset", "image-png", "tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
rodio = { version = "0.17", features = ["symphonia-all"] }
rubato = "0.14"
keyring = "3"
notify = "6.1"
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
zip = "0.6"
rfd = "0.14"
symphonia = { version = "0.5.3", features = ["all"] }
sha2 = "0.11.0"
hex = "0.4.3"



